--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Herramienta para crear y organizar la lista de la compra">
-  <title>Document</title>
+  <title>Lista de la compra</title>
 </head>
 
 <body>
