Add nav skeleton to index.html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 <body>
   <header>
     <h1>Lista de la Compra</h1>
+    <nav>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </nav>
   </header>
 </body>
 
