Add content to navigation menu items

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <h1>Lista de la Compra</h1>
     <nav>
       <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Principal</li>
+        <li>Lista</li>
+        <li>Acerca de</li>
       </ul>
     </nav>
   </header>
