Add main skeleton to index.html

--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
       </ul>
     </nav>
   </header>
+  <main>
+    <section>
+      <button>-</button>
+      <p>2/3 comprados</p>
+    </section>
+    <section>
+      <h2>Añadir artículo</h2>
+      <form>
+        <label for="name">Nombre:</label>
+        <input type="text" id="name">
+        <label for="price">Precio:</label>
+        <input type="text" id="price">
+        <button type="submit">Añadir</button>
+      </form>
+    </section>
+  </main>
 </body>
 
 </html>
