--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Herramienta para crear y organizar la lista de la compra">
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+    integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous" />
   <link rel="stylesheet" href="styles.css">
   <title>Lista de la compra</title>
 </head>
@@ -24,7 +26,7 @@
   </header>
   <main>
     <section>
-      <button>-</button>
+      <button class="fa-solid fa-circle-minus add-remove-button" style="color: #ffffff;"></button>
       <p>2/3 comprados</p>
     </section>
     <section>
