Add euro symbol to form

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <input type="text" id="name">
         <label for="price">Precio:</label>
         <input type="text" id="price">
+        <span>€</span>
         <button type="submit">Añadir</button>
       </form>
     </section>
