Fix minus icon on index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </header>
   <main>
     <section>
-      <button class="fa-solid fa-circle-minus add-remove-button" style="color: #ffffff;"></button>
+      <button class="fa-circle-minus add-remove-button"></button>
       <p>2/3 comprados</p>
     </section>
     <section>
